Jdk11 preparation, jakarta uptake, osgi and docs fixes (#126)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>